fixes database error and spacing in database.yml

--- a/app/assets/stylesheets/moons.scss
+++ b/app/assets/stylesheets/moons.scss
@@ -14,6 +14,10 @@ body {
   color: white;
   font-family: 'Lekton', sans-serif;
   padding: 0;
+  margin:0;
+  // in a media query for iphone:
+  // position: relative;
+  // height: 100vh;
 }
 .site-container {
   padding:80px;
@@ -33,6 +37,9 @@ h2 {
   width: 100vw;
   background-position:top;
   background-repeat: no-repeat;
+  // in a media query for iphone:
+  // position: absolute;
+  // bottom: 0;
 }
 
 .hidden {
